--- a/index.html
+++ b/index.html
@@ -1361,7 +1361,13 @@
         <button class="btn">+</button>
         <button class="btn">-</button>
         <button class="btn">🌙</button>
-        <button class="btn" id="languageBtn">PL</button>
+        <div class="lang-container">
+            <button class="btn" id="languageBtn">PL</button>
+            <div class="lang-dropdown" id="langDropdown" style="display: none;">
+                <button class="lang-option" data-lang="en">EN</button>
+                <button class="lang-option" data-lang="ua">UA</button>
+            </div>
+        </div>
     </div>
 </div>
 <div class="container">
