--- a/index.html
+++ b/index.html
@@ -1327,6 +1327,13 @@
         <button id="zoomInBtn" class="btn btn-sm" aria-label="Powiększ"> + </button>
         <button id="zoomOutBtn" class="btn btn-sm" aria-label="Pomniejsz"> - </button>
         <button id="toggleDarkModeBtn" class="btn btn-sm" aria-label="Przełącz tryb ciemny">🌙</button>
+        <div class="dropdown">
+            <button id="dropdownBtn" class="btn btn-sm dropdown-btn" aria-label="Otwórz dodatkowe opcje">⚙️</button>
+            <div class="dropdown-menu" id="dropdownMenu">
+                <button class="dropdown-item" aria-label="Opcja 1">1</button>
+                <button class="dropdown-item" aria-label="Opcja 2">2</button>
+            </div>
+        </div>
     </div>
 </div>
 <div class="container">
