--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
         display: none;
         position: absolute;
         top: 100%;
-        right: 0; /* Wyrównanie do prawej krawędzi głównego przycisku */
+        right: -12px; /* Przesunięcie w prawo o 12px, aby wyrównać z prawą krawędzią głównego przycisku */
         padding: 5px;
         z-index: 1000;
         min-width: 50px;
