--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
         color: var(--primary-text);
         font-size: 0.9em;
         box-shadow: 0 4px 6px var(--shadow-color);
-        transition: transform 0.2s ease, box-shadow 0.3s ease;
+        /*transition: transform 0.2s ease, box-shadow 0.3s ease;*/
         background-size: cover; /* Dopasowanie obrazka do rozmiaru przycisku */
         background-position: center;
         text-indent: -9999px; /* Ukrycie tekstu, aby widoczne było tylko tło */
@@ -1021,9 +1021,9 @@
         background-image: url('flag-ua.png');
     }
     
-    .dropdown-btn:hover {
+    /*.dropdown-btn:hover {
         transform: translateY(-2px);
-        box-shadow: 0 6px 12px var(--shadow-color);
+        box-shadow: 0 6px 12px var(--shadow-color);*/
     }
     
     .dropdown-menu {
