--- a/index.html
+++ b/index.html
@@ -2874,6 +2874,135 @@
     // Dostępne języki
     const languages = ['PL', 'EN', 'UA'];
     let currentLanguage = 'PL'; // Domyślny język
+
+    const translations = {
+        PL: {
+            pageTitle: "Kalkulator Obligacji Skarbu Państwa",
+            header: "Kalkulator Obligacji Skarbu Państwa",
+            bondType: "Typ obligacji*",
+            investmentAmount: "Kwota inwestycji",
+            investmentPeriod: "Okres inwestycji",
+            interestRate: "Oprocentowanie",
+            nbpRate: "Stopa Ref. NBP",
+            inflation: "Inflacja",
+            ikeIkze: "Inwestycje w IKE lub IKZE",
+            variableInflation: "Zmienna Inflacja",
+            variableNbpRate: "Zmienna Stopa Ref. NBP",
+            addChange: "Dodaj kolejną zmianę",
+            calculate: "Oblicz",
+            generatePdf: "Generuj PDF",
+            resultsSummary: "Podsumowanie wyników",
+            backToEdit: "Powrót do edycji",
+            interestSchedule: "Harmonogram odsetek",
+            capital: "Kapitał",
+            interest: "Odsetki",
+            tax: "Podatek",
+            netProfit: "Zysk netto",
+            dataDate: "Dane z dnia: 01.03.2025r.",
+            month: "Miesiąc",
+            year: "Rok",
+            investmentValue: "Wartość inwestycji",
+            interestShort: "Oproc.",
+            interestSum: "Suma odsetek",
+            redemptionFee: "Opłata za wykup",
+            netSum: "Suma netto",
+            profit: "Zysk",
+            opisyObligacji: {
+                OTS: "Obligacje 3-miesięczne, oprocentowanie stałe, wykup po 3 miesiącach.",
+                ROR: "Obligacje roczne, oprocentowanie zmienne oparte na stopie referencyjnej NBP.",
+                DOR: "Obligacje dwuletnie, oprocentowanie zmienne oparte na stopie referencyjnej NBP.",
+                TOS: "Obligacje trzyletnie, oprocentowanie stałe.",
+                COI: "Obligacje czteroletnie, oprocentowanie zmienne oparte na inflacji + marża.",
+                EDO: "Obligacje dziesięcioletnie, oprocentowanie zmienne oparte na inflacji + marża.",
+                ROS: "Obligacje rodzinne 6-letnie, oprocentowanie zmienne oparte na inflacji + marża, dla beneficjentów 500+.",
+                ROD: "Obligacje rodzinne 12-letnie, oprocentowanie zmienne oparte na inflacji + marża, dla beneficjentów 500+."
+            }
+        },
+        EN: {
+            pageTitle: "Treasury Bonds Calculator",
+            header: "Treasury Bonds Calculator",
+            bondType: "Bond Type*",
+            investmentAmount: "Investment Amount",
+            investmentPeriod: "Investment Period",
+            interestRate: "Interest Rate",
+            nbpRate: "NBP Reference Rate",
+            inflation: "Inflation",
+            ikeIkze: "Investments in IKE or IKZE",
+            variableInflation: "Variable Inflation",
+            variableNbpRate: "Variable NBP Reference Rate",
+            addChange: "Add Another Change",
+            calculate: "Calculate",
+            generatePdf: "Generate PDF",
+            resultsSummary: "Results Summary",
+            backToEdit: "Back to Edit",
+            interestSchedule: "Interest Schedule",
+            capital: "Capital",
+            interest: "Interest",
+            tax: "Tax",
+            netProfit: "Net Profit",
+            dataDate: "Data as of: 01/03/2025",
+            month: "Month",
+            year: "Year",
+            investmentValue: "Investment Value",
+            interestShort: "Int. Rate",
+            interestSum: "Interest Sum",
+            redemptionFee: "Redemption Fee",
+            netSum: "Net Sum",
+            profit: "Profit",
+            opisyObligacji: {
+                OTS: "3-month bonds, fixed interest rate, redemption after 3 months.",
+                ROR: "1-year bonds, variable interest rate based on the NBP reference rate.",
+                DOR: "2-year bonds, variable interest rate based on the NBP reference rate.",
+                TOS: "3-year bonds, fixed interest rate.",
+                COI: "4-year bonds, variable interest rate based on inflation + margin.",
+                EDO: "10-year bonds, variable interest rate based on inflation + margin.",
+                ROS: "6-year family bonds, variable interest rate based on inflation + margin, for 500+ beneficiaries.",
+                ROD: "12-year family bonds, variable interest rate based on inflation + margin, for 500+ beneficiaries."
+            }
+        },
+        UA: {
+            pageTitle: "Калькулятор державних облігацій",
+            header: "Калькулятор державних облігацій",
+            bondType: "Тип облігацій*",
+            investmentAmount: "Сума інвестиції",
+            investmentPeriod: "Період інвестиції",
+            interestRate: "Відсоткова ставка",
+            nbpRate: "Референтна ставка НБП",
+            inflation: "Інфляція",
+            ikeIkze: "Інвестиції в IKE або IKZE",
+            variableInflation: "Змінна інфляція",
+            variableNbpRate: "Змінна референтна ставка НБП",
+            addChange: "Додати ще одну зміну",
+            calculate: "Розрахувати",
+            generatePdf: "Згенерувати PDF",
+            resultsSummary: "Підсумок результатів",
+            backToEdit: "Повернутися до редагування",
+            interestSchedule: "Графік відсотків",
+            capital: "Капітал",
+            interest: "Відсотки",
+            tax: "Податок",
+            netProfit: "Чистий прибуток",
+            dataDate: "Дані станом на: 01.03.2025р.",
+            month: "Місяць",
+            year: "Рік",
+            investmentValue: "Вартість інвестиції",
+            interestShort: "Відсоток",
+            interestSum: "Сума відсотків",
+            redemptionFee: "Комісія за викуп",
+            netSum: "Чиста сума",
+            profit: "Прибуток",
+            opisyObligacji: {
+                OTS: "Облігації на 3 місяці, фіксована відсоткова ставка, викуп через 3 місяці.",
+                ROR: "Річні облігації, змінна відсоткова ставка на основі референтної ставки НБП.",
+                DOR: "Дворічні облігації, змінна відсоткова ставка на основі референтної ставки НБП.",
+                TOS: "Трирічні облігації, фіксована відсоткова ставка.",
+                COI: "Чотирирічні облігації, змінна відсоткова ставка на основі інфляції + маржа.",
+                EDO: "Десятирічні облігації, змінна відсоткова ставка на основі інфляції + маржа.",
+                ROS: "Сімейні шестирічні облігації, змінна відсоткова ставка на основі інфляції + маржа, для отримувачів 500+.",
+                ROD: "Сімейні дванадцятирічні облігації, змінна відсоткова ставка на основі інфляції + маржа, для отримувачів 500+."
+            }
+        }
+    };
     
     // Funkcja aktualizująca UI
     function updateLanguageUI(selectedLang) {
