--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
         margin-top: 20px;
         padding: clamp(2px, 2vw, 20px);
         width: 100%;
-        max-width: 100%; /* Skaluje się z rozdzielczością */
+        max-width: 100%;
         margin-left: auto;
         margin-right: auto;
     }
@@ -563,8 +563,15 @@
         padding: clamp(2px, 2vw, 20px);
         border-radius: 10px;
         width: 100%;
-        max-width: 100%; /* Skaluje się z rozdzielczością */
+        max-width: 100%;
         margin: 0 auto;
+        aspect-ratio: 16 / 9;
+        min-height: 200px;
+    }
+
+    .harmonogram-chart-wrapper canvas {
+        width: 100% !important;
+        height: 100% !important;
     }
     
     .result-wrapper-chart {
@@ -897,8 +904,10 @@
         .form-select {
             height: 28px;
             width: 200px;
-            padding: 4px 20px 4px 8px; /* Wyśrodkowanie tekstu */
+            padding: 4px 24px 4px 4px;
             line-height: 20px;
+            text-align: center;
+            background-position: right 8px center;
         }
     
         .input-group-text {
