--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
     }
 
     input[type="range"].form-range::-webkit-slider-thumb {
-        background: var(--accent-gradient-start);
+        background: #b0b0b0;
         width: 11px;
         height: 11px;
         border-radius: 50%;
@@ -575,7 +575,7 @@
 
     /* D A R K   M O D E   -   S P E C Y F I C Z N E */
     .dark-mode input[type="range"].form-range::-webkit-slider-thumb {
-        background: var(--accent-gradient-start-black);
+        background: #333333;
         transform: translateY(2px);
     }
 
