--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,7 @@
 
     .dropdown-btn,
     .dropdown-item {
-        ppadding: 2px 8px;
+        padding: 2px 8px;
         width: 25px;
         height: 25px;
         border-radius: 50%;
