--- a/index.html
+++ b/index.html
@@ -11,88 +11,148 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="form-section" id="formSection">
-        <div class="header-row">
-            <h4>Kalkulator Lokat</h4>
+    <div class="logo-container">
+        <img src="cropped-logo-FB-1.png" id="siteLogo" alt="Finance Brothers Logo" class="logo d-block mx-auto">
+        <div class="zoom-controls">
+            <button id="zoomInBtn" class="btn btn-sm" aria-label="Powiększ">+</button>
+            <button id="zoomOutBtn" class="btn btn-sm" aria-label="Pomniejsz">-</button>
+            <button id="toggleDarkModeBtn" class="btn btn-sm" aria-label="Przełącz tryb ciemny">🌙</button>
         </div>
-        <div class="form-container">
-            <div class="form-wrapper">
-                <form id="lokatyForm">
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="kwota" class="form-label">Kwota lokaty</label>
-                            <div class="input-group">
-                                <input type="number" class="form-control" id="kwota" min="100" max="10000000" step="100" value="10000">
-                                <span class="input-group-text">zł</span>
+    </div>
+    <div class="container">
+        <div class="form-section" id="formSection">
+            <div class="header-row">
+                <h4>Kalkulator Lokat</h4>
+            </div>
+            <div class="form-container">
+                <div class="form-wrapper">
+                    <form id="lokatyForm">
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="kwota" class="form-label">Kwota lokaty</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" id="kwota" min="100" max="10000000" step="100" value="10000">
+                                    <span class="input-group-text">zł</span>
+                                </div>
+                                <input type="range" class="form-range" id="kwotaRange" min="100" max="10000000" step="100" value="10000">
                             </div>
-                            <input type="range" class="form-range" id="kwotaRange" min="100" max="10000000" step="100" value="10000">
+                            <div class="form-group">
+                                <label for="dlugoscUmowy" class="form-label">Długość umowy</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" id="dlugoscUmowy" min="1" value="3">
+                                    <select class="form-control" id="jednostkaOkresu">
+                                        <option value="dni">dni</option>
+                                        <option value="miesiace" selected>miesiące</option>
+                                        <option value="lata">lata</option>
+                                    </select>
+                                </div>
+                                <div class="info-text" id="okresWDniach">Okres w dniach: 91</div>
+                            </div>
+                            <div class="form-group">
+                                <label for="oprocentowanie" class="form-label">Oprocentowanie</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" id="oprocentowanie" min="0.1" max="25" step="0.1" value="4">
+                                    <span class="input-group-text">%</span>
+                                </div>
+                                <input type="range" class="form-range" id="oprocentowanieRange" min="0.1" max="25" step="0.1" value="4">
+                                <div class="info-text">Roczne oprocentowanie</div>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label for="dlugoscUmowy" class="form-label">Długość umowy</label>
-                            <div class="input-group">
-                                <input type="number" class="form-control" id="dlugoscUmowy" min="1" value="3">
-                                <select class="form-control" id="jednostkaOkresu">
-                                    <option value="dni">dni</option>
-                                    <option value="miesiace" selected>miesiące</option>
-                                    <option value="lata">lata</option>
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="podatek" class="form-label">Podatek</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" id="podatek" min="0" max="50" step="0.1" value="19">
+                                    <span class="input-group-text">%</span>
+                                </div>
+                                <input type="range" class="form-range" id="podatekRange" min="0" max="50" step="0.1" value="19">
+                            </div>
+                            <div class="form-group">
+                                <label for="kapitalizacja" class="form-label">Kapitalizacja odsetek</label>
+                                <select class="form-control" id="kapitalizacja">
+                                    <option value="naKoniec" selected>Na koniec okresu</option>
+                                    <option value="dzienna">Dzienna</option>
+                                    <option value="miesieczna">Miesięczna</option>
+                                    <option value="kwartalna">Kwartalna</option>
+                                    <option value="roczna">Roczna</option>
                                 </select>
                             </div>
-                            <div class="info-text" id="okresWDniach">Okres w dniach: 91</div>
-                        </div>
-                        <div class="form-group">
-                            <label for="oprocentowanie" class="form-label">Oprocentowanie</label>
-                            <div class="input-group">
-                                <input type="number" class="form-control" id="oprocentowanie" min="0.1" max="25" step="0.1" value="4">
-                                <span class="input-group-text">%</span>
+                            <div class="form-group">
+                                <label for="dataRozpoczecia" class="form-label">Data rozpoczęcia</label>
+                                <div class="input-group">
+                                    <input type="date" class="form-control" id="dataRozpoczecia">
+                                </div>
+                                <div class="info-text" id="dataZakonczenia">Data zakończenia: 09.07.2025</div>
                             </div>
-                            <input type="range" class="form-range" id="oprocentowanieRange" min="0.1" max="25" step="0.1" value="4">
-                            <div class="info-text">Roczne oprocentowanie</div>
                         </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="podatek" class="form-label">Podatek</label>
-                            <div class="input-group">
-                                <input type="number" class="form-control" id="podatek" min="0" max="50" step="0.1" value="19">
-                                <span class="input-group-text">%</span>
+                        <div class="variable-rate-container">
+                            <div class="checkbox-row" id="variableCheckboxRow">
+                                <label class="checkbox-label" id="zmienneOprocentowanieLabel">
+                                    <input type="checkbox" id="zmienneOprocentowanieBtn">
+                                    <span class="checkbox-custom"></span>
+                                    <b>Zmienne Oprocentowanie</b>
+                                </label>
                             </div>
-                            <input type="range" class="form-range" id="podatekRange" min="0" max="50" step="0.1" value="19">
-                        </div>
-                        <div class="form-group">
-                            <label for="kapitalizacja" class="form-label">Kapitalizacja odsetek</label>
-                            <select class="form-control" id="kapitalizacja">
-                                <option value="naKoniec" selected>Na koniec okresu</option>
-                                <option value="dzienna">Dzienna</option>
-                                <option value="miesieczna">Miesięczna</option>
-                                <option value="kwartalna">Kwartalna</option>
-                                <option value="roczna">Roczna</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="dataRozpoczecia" class="form-label">Data rozpoczęcia</label>
-                            <div class="input-group">
-                                <input type="date" class="form-control" id="dataRozpoczecia">
+                            <div class="variable-inputs" id="variableInputs">
+                                <div class="variable-inputs-wrapper" id="variableInputsWrapper"></div>
+                                <button type="button" class="btn btn-secondary btn-sm" id="addVariableBtn" aria-label="Dodaj kolejne zmienne oprocentowanie">Dodaj kolejną zmianę</button>
                             </div>
-                            <div class="info-text" id="dataZakonczenia">Data zakończenia: 09.07.2025</div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-primary" id="obliczBtn" aria-label="Oblicz wyniki lokaty">Oblicz</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="result-section" id="resultSection">
+            <button id="generatePdfBtn" class="btn btn-primary btn-sm" aria-label="Generuj PDF z wynikami">Generuj PDF</button>
+            <div class="result-header">
+                <h4 id="resultHeader">Podsumowanie wyników</h4>
+            </div>
+            <button class="btn btn-secondary mb-3" onclick="showForm()" aria-label="Powrót do edycji formularza">Powrót do edycji</button>
+            <div class="result-container">
+                <div class="result-wrapper-chart">
+                    <div class="summary-bars">
+                        <div class="summary-bar" data-tooltip="10 000,00 zł">Kwota lokaty: 10 000,00 zł</div>
+                        <div class="summary-bar" data-tooltip="616,44 zł">Odsetki brutto: 616,44 zł</div>
+                        <div class="summary-bar" data-tooltip="308,22 zł">Podatek: 308,22 zł</div>
+                        <div class="summary-bar" data-tooltip="308,22 zł">Odsetki netto: 308,22 zł</div>
+                        <div class="summary-bar" data-tooltip="10 308,22 zł">Całkowita kwota po zakończeniu: 10 308,22 zł</div>
+                        <div class="summary-bar" data-tooltip="9.07.2025">Data zakończenia: 9.07.2025</div>
+                    </div>
+                </div>
+            </div>
+            <div class="harmonogram-container">
+                <div class="result-wrapper-harmonogram">
+                    <div class="harmonogram-chart-wrapper">
+                        <div class="harmonogram">
+                            <h5 class="btn-toggle" onclick="toggleHarmonogram('harmonogramContent')" aria-label="Przełącz widoczność harmonogramu odsetek">Harmonogram odsetek ▼</h5>
+                            <div id="harmonogramContent">
+                                <table class="table table-striped">
+                                    <thead id="harmonogramNaglowek">
+                                        <tr>
+                                            <th id="pierwszaKolumnaNaglowek">Okres</th>
+                                            <th>Wartość lokaty</th>
+                                            <th>Oprocentowanie</th>
+                                            <th>Odsetki brutto</th>
+                                            <th>Suma odsetek</th>
+                                            <th>Podatek</th>
+                                            <th>Zysk netto</th>
+                                            <th>Suma netto</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="harmonogramTabela"></tbody>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="chart-container-line">
+                            <div class="chart-line">
+                                <canvas id="lokatyChartLine" aria-label="Wykres liniowy wartości lokaty w czasie"></canvas>
+                            </div>
                         </div>
                     </div>
-                    <div class="variable-rate-container">
-                        <div class="checkbox-row" id="variableCheckboxRow">
-                            <label class="checkbox-label" id="zmienneOprocentowanieLabel">
-                                <input type="checkbox" id="zmienneOprocentowanieBtn">
-                                <span class="checkbox-custom"></span>
-                                <b>Zmienne Oprocentowanie</b>
-                            </label>
-                        </div>
-                        <div class="variable-inputs" id="variableInputs">
-                            <div class="variable-inputs-wrapper" id="variableInputsWrapper"></div>
-                            <button type="button" class="btn btn-secondary btn-sm" id="addVariableBtn" aria-label="Dodaj kolejne zmienne oprocentowanie">Dodaj kolejną zmianę</button>
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <button type="button" class="btn btn-primary" id="obliczBtn" aria-label="Oblicz wyniki lokaty">Oblicz</button>
-                    </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
