--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
         --small-font-size: 0.7em;
         --border-radius: 5px;
         --range-bg: #e5e5e5;
+        --button-bg: #c2b280; /* Tło dla przycisków zoom-controls */
+        --button-text: #333333; /* Kolor tekstu dla przycisków */
     }
 
     .dark-mode {
@@ -191,6 +193,8 @@
         --harmonogram-bg: #404040;
         --range-bg: #333333;
         --accent-gradient-start-black: #a3945c;
+        --button-bg: #8b7d47; /* Tło dla przycisków w trybie ciemnym */
+        --button-text: #e0e0e0; /* Kolor tekstu w trybie ciemnym */
     }
 
     *, ::after, ::before {
@@ -253,6 +257,16 @@
         padding: 0;
         font-size: 0.9em;
         line-height: 25px;
+        background: var(--button-bg); /* Dodane tło dla przycisków */
+        color: var(--button-text); /* Kolor tekstu */
+        border: 1px solid var(--border-color);
+        box-shadow: 0 2px 4px var(--shadow-color);
+        transition: background 0.3s ease, transform 0.2s ease;
+    }
+
+    .zoom-controls .btn:hover {
+        background: var(--accent-gradient-end);
+        transform: translateY(-1px);
     }
 
     .logo, #siteLogo {
@@ -582,6 +596,54 @@
         z-index: 10;
     }
 
+    /* Style dla harmonogramu i tabeli */
+    .harmonogram {
+        margin-top: 20px;
+        background: var(--harmonogram-bg);
+        padding: 15px;
+        border-radius: var(--border-radius);
+        box-shadow: 0 2px 4px var(--shadow-color);
+    }
+
+    .harmonogram h5 {
+        margin: 0;
+        font-size: 1em;
+        cursor: pointer;
+        color: var(--primary-text);
+    }
+
+    .harmonogram table {
+        width: 100%;
+        border-collapse: collapse;
+        font-size: 0.9em;
+        color: var(--primary-text);
+    }
+
+    .harmonogram th, .harmonogram td {
+        padding: 8px;
+        text-align: center;
+        border: 1px solid var(--border-color);
+    }
+
+    .harmonogram th {
+        background: var(--input-group-bg);
+        font-weight: 700;
+        text-transform: uppercase;
+    }
+
+    .harmonogram .table-striped tbody tr:nth-of-type(odd) {
+        background-color: rgba(0, 0, 0, 0.05);
+    }
+
+    .dark-mode .harmonogram .table-striped tbody tr:nth-of-type(odd) {
+        background-color: rgba(255, 255, 255, 0.05);
+    }
+
+    .chart-container-line {
+        margin-top: 20px;
+        height: 300px;
+    }
+
     @media (max-width: 576px) {
         .form-row, .checkbox-row, .fields-wrapper, .variable-inputs-wrapper {
             flex-direction: column;
@@ -608,6 +670,14 @@
             width: 70px;
             padding: 4px 8px;
             line-height: 20px;
+        }
+
+        .harmonogram table {
+            font-size: 0.8em;
+        }
+
+        .harmonogram th, .harmonogram td {
+            padding: 5px;
         }
     }
 </style>
@@ -1069,6 +1139,13 @@
     }
 
     function generatePDF() {
+        const dataZakonczenia = new Date(elements.dataRozpoczecia.value);
+        const dlugoscUmowy = parseInt(elements.dlugoscUmowy.value) || 1;
+        const jednostka = elements.jednostkaOkresu.value;
+        if (jednostka === "dni") dataZakonczenia.setDate(dataZakonczenia.getDate() + dlugoscUmowy);
+        else if (jednostka === "miesiace") dataZakonczenia.setMonth(dataZakonczenia.getMonth() + dlugoscUmowy);
+        else dataZakonczenia.setFullYear(dataZakonczenia.getFullYear() + dlugoscUmowy);
+
         const docDefinition = {
             content: [
                 { text: 'Kalkulator Lokat - Podsumowanie', style: 'header' },
@@ -1077,7 +1154,7 @@
                 { text: `Podatek: ${state.harmonogramData.reduce((sum, row) => sum + parseFloat(row.podatek), 0).toFixed(2)} zł` },
                 { text: `Odsetki netto: ${state.harmonogramData.reduce((sum, row) => sum + parseFloat(row.zyskNetto), 0).toFixed(2)} zł` },
                 { text: `Całkowita kwota po zakończeniu: ${state.harmonogramData[state.harmonogramData.length - 1].sumaNetto} zł` },
-                { text: `Data zakończenia: ${new Date(elements.dataRozpoczecia.value).toLocaleDateString('pl-PL')}` },
+                { text: `Data zakończenia: ${dataZakonczenia.toLocaleDateString('pl-PL')}` },
                 { text: '\nHarmonogram odsetek:', style: 'subheader' },
                 {
                     table: {
@@ -1089,7 +1166,7 @@
                                 row.okres,
                                 `${row.wartoscLokaty} zł`,
                                 `${row.oprocentowanie}%`,
-                                `${row.odsetkiBrutto} zł`,
+                                `${row.odsetkiBrutto} zł`, // Poprawione - dodano odsetki brutto
                                 `${row.sumaOdsetek} zł`,
                                 `${row.podatek} zł`,
                                 `${row.zyskNetto} zł`,
