--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
         --small-font-size: 0.7em;
         --border-radius: 5px;
         --range-bg: #e5e5e5;
-        --button-bg: #c2b280; /* Tło dla przycisków zoom-controls */
-        --button-text: #333333; /* Kolor tekstu dla przycisków */
+        --button-bg: #c2b280;
+        --button-text: #333333;
     }
 
     .dark-mode {
@@ -193,8 +193,8 @@
         --harmonogram-bg: #404040;
         --range-bg: #333333;
         --accent-gradient-start-black: #a3945c;
-        --button-bg: #8b7d47; /* Tło dla przycisków w trybie ciemnym */
-        --button-text: #e0e0e0; /* Kolor tekstu w trybie ciemnym */
+        --button-bg: #8b7d47;
+        --button-text: #e0e0e0;
     }
 
     *, ::after, ::before {
@@ -257,8 +257,8 @@
         padding: 0;
         font-size: 0.9em;
         line-height: 25px;
-        background: var(--button-bg); /* Dodane tło dla przycisków */
-        color: var(--button-text); /* Kolor tekstu */
+        background: var(--button-bg);
+        color: var(--button-text);
         border: 1px solid var(--border-color);
         box-shadow: 0 2px 4px var(--shadow-color);
         transition: background 0.3s ease, transform 0.2s ease;
@@ -597,6 +597,21 @@
     }
 
     /* Style dla harmonogramu i tabeli */
+    .harmonogram-container {
+        display: block; /* Poprawione, aby harmonogram i wykres były w jednym bloku */
+        width: 100%;
+    }
+
+    .result-wrapper-harmonogram {
+        display: block;
+        width: 100%;
+    }
+
+    .harmonogram-chart-wrapper {
+        display: block; /* Upewniamy się, że elementy są ułożone pionowo */
+        width: 100%;
+    }
+
     .harmonogram {
         margin-top: 20px;
         background: var(--harmonogram-bg);
@@ -641,7 +656,19 @@
 
     .chart-container-line {
         margin-top: 20px;
-        height: 300px;
+        width: 100%;
+        height: 300px; /* Ograniczenie wysokości wykresu */
+        position: relative;
+    }
+
+    .chart-line {
+        width: 100%;
+        height: 100%;
+    }
+
+    .chart-line canvas {
+        width: 100% !important;
+        height: 100% !important;
     }
 
     @media (max-width: 576px) {
@@ -678,6 +705,10 @@
 
         .harmonogram th, .harmonogram td {
             padding: 5px;
+        }
+
+        .chart-container-line {
+            height: 200px; /* Mniejsza wysokość na urządzeniach mobilnych */
         }
     }
 </style>
@@ -1166,7 +1197,7 @@
                                 row.okres,
                                 `${row.wartoscLokaty} zł`,
                                 `${row.oprocentowanie}%`,
-                                `${row.odsetkiBrutto} zł`, // Poprawione - dodano odsetki brutto
+                                `${row.odsetkiBrutto} zł`,
                                 `${row.sumaOdsetek} zł`,
                                 `${row.podatek} zł`,
                                 `${row.zyskNetto} zł`,
