--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         line-height: 25px;
         background: var(--button-bg);
         color: var(--button-text);
-        border: 1px solid var(--border-color);
+        border: none;
         box-shadow: 0 2px 4px var(--shadow-color);
         transition: background 0.3s ease, transform 0.2s ease;
     }
@@ -438,25 +438,14 @@
     .form-select {
         max-width: 100px;
         appearance: none;
-        background: var(--input-bg);
+        background: var(--input-bg) url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="%23333333" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>') no-repeat right 5px center;
+        background-size: 10px;
         padding: 0 20px 0 5px;
         line-height: 22px;
-        position: relative;
     }
 
     .form-select::-ms-expand {
         display: none;
-    }
-    
-    .form-select::after {
-        content: "▼";
-        position: absolute;
-        right: 5px;
-        top: 50%;
-        transform: translateY(-50%);
-        font-size: 0.6em;
-        color: var(--primary-text);
-        pointer-events: none;
     }
 
     input[type="range"].form-range {
@@ -697,8 +686,9 @@
         background-color: rgba(255, 255, 255, 0.05);
     }
 
-    .dark-mode .form-select::after {
-        color: var(--primary-text);
+    .dark-mode .form-select {
+        background: var(--input-bg) url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="%23e0e0e0" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>') no-repeat right 5px center;
+        background-size: 10px;
     }
 
     
